--- a/css/calendar.css
+++ b/css/calendar.css
@@ -15,6 +15,8 @@
 [data-calendar] td.is-active button,
 [data-calendar] td.is-active {
     font-weight: bold;
+    background: #b3cbed;
+    color: #212121;
 }
 
 [data-calendar] td.is-inactive {
@@ -54,7 +56,7 @@
     margin: 0;
 }
 
-[data-calendar] .is-active:after {
+[data-calendar] .is-today:after {
     content: '';
     border: 1px solid #b3cbed;
     position: absolute;
